override mvn surefire plugin to fix bug in openjdk.